--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <meta name="viewpoint" content="width=device-width">
         <meta property="og:local" content="ja_JP">
         <title>入会申し込み</title>
-        <link rel="stylesheet" href="css/sanitize.css">
+        <!--
+            <link rel="stylesheet" href="css/sanitize.css">
+        -->
         <link rel="stylesheet" href="css/style.css">
         <style>
             
@@ -13,11 +15,13 @@
     </head>
 
     <body>
+        <div class="content">
             <h1>入会申し込み</h1>
             <p>入会するには、次のホームに必要事項をご記入ください。</p>
             <p>メールアドレス：<input type="email" name="mymall" value="main@example.com"></p>
             <p>パスワード：<input type="password" name="pass"</p>
             <p><button type="submit">登録する</button></p>
+        </div>
     </body>
     
 </html>
