--- a/index.html
+++ b/index.html
@@ -18,12 +18,19 @@
         <div class="content">
             <h1>入会申し込み</h1>
             <p>入会するには、次のホームに必要事項をご記入ください。</p>
-            <p>メールアドレス：<input type="email" name="mymall" value="main@example.com"></p>
-            <p>パスワード：<input type="password" name="pass"</p>
-            <p><button type="submit">登録する</button></p>
+            <div class="control">
+                <label for="mymail">メールアドレス <span class="required">必須</span> </label>
+                <input id="mymail" type="email" name="mymall"> <!--  value="main@example.com" -->
+            </div>
+            <div class="control">
+                <label for="passcode">パスワード <span class="required">必須</span> </label>
+                <input id="passcode" type="password" name="passcode">
+            </div>
+            <div class="control">
+                <p><button type="submit">登録する</button></p>
+            </div>
         </div>
     </body>
-    
 </html>
 
 
