--- a/nextpage/index.html
+++ b/nextpage/index.html
@@ -12,16 +12,41 @@
             <header>
                 <h1>COCOA</h1>
             </header>
-            <section>
-                <h1>イヤホンジャックの向こう側</h1>
-                <p>Album</p>
-                <p>COCOA 4枚目のアルバムとなる今作。ジャケットデザインに色鉛筆画家の「カタヒラシュンシ」氏を迎え、音楽と絵のコラボを実現させた一枚。</p>
-
-                <p>
-                    HONDA CARS 静岡 CMタイアップの「キミノウタ」をはじめ、完全書き下ろしの新曲３曲を含む全６曲を収録。<br>
-                    イヤホンジャックの向こう側に広がる世界を、ぜひご堪能ください。
-                </p>
-            </section>
+            <div class="content">
+                <section class="infomation">
+                    <h1>イヤホンジャックの向こう側</h1>
+                    <p class="type">Album</p>
+                    <div class="description">
+                        <a href="#">
+                                <img src="img/jacket.png" alt="イヤホンジャックの向こう側のジャケット写真">
+                        </a>
+                        <p>COCOA 4枚目のアルバムとなる今作。ジャケットデザインに色鉛筆画家の「カタヒラシュンシ」氏を迎え、音楽と絵のコラボを実現させた一枚。</p>
+                        <p>
+                            HONDA CARS 静岡 CMタイアップの「キミノウタ」をはじめ、完全書き下ろしの新曲３曲を含む全６曲を収録。<br>
+                            イヤホンジャックの向こう側に広がる世界を、ぜひご堪能ください。
+                        </p>
+                    </div>
+                </section>
+                <section class="songs">
+                    <h2>収録曲</h2>
+                    <ol class="clearfix">
+                      <li><a href="https://youtu.be/" taregt="_self">C#</a></li>
+                      <!--target: _blank  新しいウインドウ・タブで開く
+                                  _self   自分自身で
+                                  _top    フレームを解除して
+                                  _parent 親フレームで
+                        -->
+                      <li>ワンルームファッションショー</li>
+                      <li>ハッピータイム</li>
+                      <li>シャンディガフ</li>
+                      <li>僕は知らない</li>
+                      <li>キミのうた</li>
+                    </ol>
+                </section>
+            </div>
+            <footer>
+                &copy; COCOA
+            </footer>
         </div>
     </body>
 </html>
